--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         {
             "name": "Eugeny G",
             "email": "rnr1721@gmail.com",
-            "homepage": "https://xhamster.biz.ua",
+            "homepage": "https://github.com/rnr1721",
             "role": "Developer"
         }
     ],
@@ -31,6 +31,9 @@
     "require-dev": {
         "vimeo/psalm": "^5.7",
         "phpunit/phpunit": "^10.0"
+    },
+    "conflict": {
+        "rnr1721/le7-db-doctrine": "*"
     },
     "scripts": {
         "test": [
